--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
             aspY = 410;
     </script>
     <script src="js/main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161453786-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-161453786-1');
+    </script>
 
 </body>
 
