added we are attanding layouts

--- a/attand1.html
+++ b/attand1.html
@@ -36,7 +36,7 @@
                         <li>AYS Frame</li>
                     </ul>
                     <div class="mockup-holder" id="capture">
-                        <img class="mainFrame" src="img/full1.png" alt="">
+                        <img class="mainFrame" src="img/attending1.png" alt="">
                         <div class="abs-div abs-div1">
                             <img class="cropped" src="img/placeholder2.png" alt="Image" />
                         </div>
@@ -46,14 +46,14 @@
 
                     <h3>Select Layout (We Will Attend)</h3>
                     <ul class="layout-box">
-                        <li class="active"><a href="index.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
-                        <li><a href="layout2.html"><img src="./img/layout2.png" alt="Layout 2"></a>
-                        </li>
+                        <li><a href="index.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
+                        <li><a href="layout2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
+
                     </ul>
 
                     <h3>Select Layout (We are Attending - Live)</h3>
                     <ul class="layout-box">
-                        <li><a href="attand1.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
+                        <li class="active"><a href="attand1.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
                         <li><a href="attand2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
                     </ul>
 
