--- a/attand2.html
+++ b/attand2.html
@@ -36,8 +36,8 @@
                         <li>AYS Frame</li>
                     </ul>
                     <div class="mockup-holder" id="capture">
-                        <img class="mainFrame" src="img/full1.png" alt="">
-                        <div class="abs-div abs-div1">
+                        <img class="mainFrame" src="img/attending2.png" alt="">
+                        <div class="abs-div abs-div2">
                             <img class="cropped" src="img/placeholder2.png" alt="Image" />
                         </div>
                     </div>
@@ -46,7 +46,7 @@
 
                     <h3>Select Layout (We Will Attend)</h3>
                     <ul class="layout-box">
-                        <li class="active"><a href="index.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
+                        <li><a href="index.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
                         <li><a href="layout2.html"><img src="./img/layout2.png" alt="Layout 2"></a>
                         </li>
                     </ul>
@@ -54,10 +54,10 @@
                     <h3>Select Layout (We are Attending - Live)</h3>
                     <ul class="layout-box">
                         <li><a href="attand1.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
-                        <li><a href="attand2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
+                        <li class="active"><a href="attand2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
                     </ul>
 
-                    <h3>Your Image <span>350 X 410</span></h3>
+                    <h3>Your Image <span>500 X 365</span></h3>
 
                     <button type="button" class="uploadImg button" data-toggle="modal" data-target="#crop-modal"
                         data-backdrop="static" data-keyboard="false">
@@ -117,19 +117,10 @@
     <script src="js/cropper.js"></script>
     <script src="js/jquery-cropper.js"></script>
     <script>
-        var aspX = 350,
-            aspY = 410;
+        var aspX = 500,
+            aspY = 365;
     </script>
     <script src="js/main.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161453786-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-161453786-1');
-    </script>
 
 </body>
 
