--- a/layout2.html
+++ b/layout2.html
@@ -44,13 +44,18 @@
                 </div>
                 <div class="mockup-right">
 
-                    <h3>Select Layout</h3>
+                    <h3>Select Layout (We Will Attend)</h3>
                     <ul class="layout-box">
                         <li><a href="index.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
                         <li class="active"><a href="layout2.html"><img src="./img/layout2.png" alt="Layout 2"></a>
                         </li>
                     </ul>
 
+                    <h3>Select Layout (We are Attending - Live)</h3>
+                    <ul class="layout-box">
+                        <li><a href="attand1.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
+                        <li><a href="attand2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
+                    </ul>
                     <h3>Your Image <span>500 X 365</span></h3>
 
                     <button type="button" class="uploadImg button" data-toggle="modal" data-target="#crop-modal"
