--- a/attand1.html
+++ b/attand1.html
@@ -44,14 +44,14 @@
                 </div>
                 <div class="mockup-right">
 
-                    <h3>Select Layout (We Will Attend)</h3>
+                    <h3>Select Layout (Individual)</h3>
                     <ul class="layout-box">
                         <li><a href="index.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
                         <li><a href="layout2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
 
                     </ul>
 
-                    <h3>Select Layout (We are Attending - Live)</h3>
+                    <h3>Select Layout (Group)</h3>
                     <ul class="layout-box">
                         <li class="active"><a href="attand1.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
                         <li><a href="attand2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
