attand1 image change

--- a/attand1.html
+++ b/attand1.html
@@ -36,8 +36,8 @@
                         <li>AYS Frame</li>
                     </ul>
                     <div class="mockup-holder" id="capture">
-                        <img class="mainFrame" src="img/attending1.png" alt="">
-                        <div class="abs-div abs-div1">
+                        <img class="mainFrame" src="img/sabha-01.png" alt="">
+                        <div class="abs-div abs-div1-attand1">
                             <img class="cropped" src="img/placeholder2.png" alt="Image" />
                         </div>
                     </div>
@@ -117,8 +117,8 @@
     <script src="js/cropper.js"></script>
     <script src="js/jquery-cropper.js"></script>
     <script>
-        var aspX = 350,
-            aspY = 410;
+        var aspX = 560,
+            aspY = 408;
     </script>
     <script src="js/main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
