attand1 new image change

--- a/attand1.html
+++ b/attand1.html
@@ -36,7 +36,7 @@
                         <li>AYS Frame</li>
                     </ul>
                     <div class="mockup-holder" id="capture">
-                        <img class="mainFrame" src="img/sabha-01.png" alt="">
+                        <img class="mainFrame" src="img/sabha-new.png" alt="">
                         <div class="abs-div abs-div1-attand1">
                             <img class="cropped" src="img/placeholder2.png" alt="Image" />
                         </div>
