--- a/attand2.html
+++ b/attand2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AYS 21</title>
+    <title>Guru Bhakti Mahostav 2023</title>
 
     <!-- Stylesheets -->
     <link
@@ -33,10 +33,10 @@
       <div class="container">
         <div class="mockup-box">
           <div class="mockup-left">
-            <h2>AYS Frame</h2>
+            <h2>Guru Bhakti Mahostav 2023 Frame</h2>
             <ul class="breadcrum">
               <li><a>Home</a> <span>&#9658;</span></li>
-              <li>AYS Frame</li>
+              <li>Guru Bhakti Mahostav 2023 Frame</li>
             </ul>
             <div class="mockup-holder" id="capture">
               <img class="mainFrame" src="img/attending2.png" alt="" />
