--- a/index_old.html
+++ b/index_old.html
@@ -39,8 +39,8 @@
               <li>Guru Bhakti Mahostav 2023 Frame</li>
             </ul>
             <div class="mockup-holder" id="capture">
-              <img class="mainFrame" src="img/full2.png" alt="" />
-              <div class="abs-div abs-div2">
+              <img class="mainFrame" src="img/full1.png" alt="" />
+              <div class="abs-div abs-div1">
                 <img
                   class="cropped border-radius"
                   src="img/placeholder2.png"
@@ -52,12 +52,12 @@
           <div class="mockup-right">
             <h3>Select Layout (Individual)</h3>
             <ul class="layout-box">
-              <li>
+              <li class="active">
                 <a href="index.html"
                   ><img src="./img/layout1.jpg" alt="Layout 1"
                 /></a>
               </li>
-              <li class="active">
+              <li>
                 <a href="layout2.html"
                   ><img src="./img/layout2.jpg" alt="Layout 2"
                 /></a>
@@ -69,7 +69,8 @@
                         <li><a href="attand1.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
                         <li><a href="attand2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
                     </ul> -->
-            <h3>Your Image <span>205 X 185</span></h3>
+
+            <h3>Your Image <span>350 X 410</span></h3>
 
             <button
               type="button"
@@ -144,9 +145,16 @@
     <script src="js/cropper.js"></script>
     <script src="js/jquery-cropper.js"></script>
     <script>
-      var aspX = 204,
-        aspY = 185;
+      var aspX = 193,
+        aspY = 189;
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-161453786-1"
+    ></script>
     <script src="js/main.js"></script>
+    <script></script>
   </body>
 </html>
