--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       <div class="container">
         <div class="mockup-box">
           <div class="mockup-left">
-            <h2>Guru Bhakti Mahostav 2023 Frame</h2>
+            <h2>Guru Bhakti Mahostav 2023</h2>
             <ul class="breadcrum">
               <li><a>Home</a> <span>&#9658;</span></li>
-              <li>Guru Bhakti Mahostav 2023 Frame</li>
+              <li>Guru Bhakti Mahostav 2023</li>
             </ul>
             <div class="mockup-holder" id="capture">
-              <img class="mainFrame" src="img/full1.png" alt="" />
-              <div class="abs-div abs-div1">
+              <img class="mainFrame" src="img/full2.png" alt="" />
+              <div class="abs-div abs-div2">
                 <img
                   class="cropped border-radius"
                   src="img/placeholder2.png"
@@ -50,27 +50,26 @@
             </div>
           </div>
           <div class="mockup-right">
-            <h3>Select Layout (Individual)</h3>
+            <!-- <h3>Select Layout (Individual)</h3>
             <ul class="layout-box">
-              <li class="active">
+              <li>
                 <a href="index.html"
                   ><img src="./img/layout1.jpg" alt="Layout 1"
                 /></a>
               </li>
-              <li>
+              <li class="active">
                 <a href="layout2.html"
                   ><img src="./img/layout2.jpg" alt="Layout 2"
                 /></a>
               </li>
-            </ul>
+            </ul> -->
 
             <!-- <h3>Select Layout (Group)</h3>
                     <ul class="layout-box">
                         <li><a href="attand1.html"><img src="./img/layout1.png" alt="Layout 1"></a></li>
                         <li><a href="attand2.html"><img src="./img/layout2.png" alt="Layout 2"></a></li>
                     </ul> -->
-
-            <h3>Your Image <span>350 X 410</span></h3>
+            <h3>Your Image <span>205 X 185</span></h3>
 
             <button
               type="button"
@@ -145,16 +144,9 @@
     <script src="js/cropper.js"></script>
     <script src="js/jquery-cropper.js"></script>
     <script>
-      var aspX = 204,
+      var aspX = 205,
         aspY = 185;
     </script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-161453786-1"
-    ></script>
     <script src="js/main.js"></script>
-    <script></script>
   </body>
 </html>
