google analytics added

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
       var aspX = 205,
         aspY = 185;
     </script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-161453786-1"
+    ></script>
     <script src="js/main.js"></script>
   </body>
 </html>
