--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <li>Guru Bhakti Mahostav 2023</li>
             </ul>
             <div class="mockup-holder" id="capture">
-              <img class="mainFrame" src="img/full2.png" alt="" />
+              <img class="mainFrame" src="img/new.png" alt="" />
               <div class="abs-div abs-div2">
                 <img
                   class="cropped border-radius"
@@ -144,8 +144,8 @@
     <script src="js/cropper.js"></script>
     <script src="js/jquery-cropper.js"></script>
     <script>
-      var aspX = 205,
-        aspY = 185;
+      var aspX = 200,
+        aspY = 175;
     </script>
     <script
       async
